systemd-genie (2.5) bullseye bookworm sid focal jammy; urgency=medium

        * Fixed Debian multiarch packaging.
        * Dynamically build WSLInterop.conf based on existing (fixes #287, #295).

 -- Alistair Young <avatar@arkane-systems.net>  Sat, 25 Jun 2022 12:50:00 -0500

systemd-genie (2.4) bullseye bookworm sid focal jammy; urgency=medium

        * Deprecated support for Debian buster and Ubuntu bionic.
        * (The above should still function but will no longer be tested.)
        * Python refactoring.
        * Fixed no-command-specified error for genie -c.
        * Added cwd preservation note to help for genie -c.
        * Added proper return values for status checks (fixes #269).
        * Properly configure WSLInterop binary format (fixes #267, #264).
        * Carries through real UID from wrapper (fixes #258).
        * Use systemd-tmpfiles for WSLg support (fixes #214, #175).
        * Warn user if unsupported Unicode hostname (warns on #268, no fix).
        * arm64 package for Fedora.
        * Miscellaneous packaging fixes.

 -- Alistair Young <avatar@arkane-systems.net>  Sat, 25 Jun 2022 12:50:00 -0500

systemd-genie (2.3) buster bullseye bookworm sid bionic focal jammy; urgency=medium

        * Paths-containing-spaces fix (#240).
        * Makefile updates for CI build.
        * Fixed WSL 1 detection.
        * Added -a/--as-user option to allow shell/command as any user.
        * Added support for Ubuntu 22.04 LTS (Jammy Jellyfish).
        * Greater robustness against misconfigured hosts files (fixes #247).
        * arm64 support.
        * Miscellaneous fixes.

 -- Alistair Young <avatar@arkane-systems.net>  Tue, 22 Mar 2022 08:15:00 -0500

systemd-genie (2.2) buster bullseye bookworm sid focal bionic; urgency=medium

        * Single-file package python scripts.
        * Man page fixes.
        * Fixed building on Python 3.10.
        * Dropped the "local" install option (little used; use tarball instead).
