@@ -11,6 +11,7 @@ Vcs-Browser: https://github.com/arkane-systems/genie
 Package: systemd-genie
 Architecture: amd64 arm64
 Depends: ${misc:Depends}, ${shlibs:Depends}, dbus, policykit-1, daemonize, systemd (>= 232-25), python3 (>= 3.7), python3-pip, python3-psutil, systemd-container (>= 232-25), gawk
+Conflicts: bottle-imp
 Description: quick way into a systemd "bottle" under Windows Subsystem for Linux
  Automates the process of starting up, entering into, and shutting down
  a container within which systemd is pid 1, effectively enabling the use
